--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="auth-card">
         <div class="auth-panel auth-panel-branding">
           <div class="auth-logo"><i class="fas fa-globe"></i></div>
-          <h2 class="branding-title">GF Consultant</h2>
+          <h2 class="branding-title">Global Finance Consultant</h2>
           <p class="branding-subtitle">
             Streamline your lending operations with precision and ease.
           </p>
@@ -91,7 +91,7 @@
         <div class="sidebar-header">
           <h2 class="ola">
             <i class="fas fa-globe"></i>
-            <span class="sidebar-brand-full">GF Consultant</span>
+            <span class="sidebar-brand-full">Global Finance Consultant</span>
             <span class="sidebar-brand-short">GFC</span>
           </h2>
         </div>
@@ -188,6 +188,9 @@
               class="loan-frequency-badge"
               id="details-modal-frequency"
             ></span>
+            <div id="loan-switcher-container" class="hidden">
+              <select id="loan-switcher-select" class="form-control"></select>
+            </div>
           </div>
           <button class="modal-close">&times;</button>
         </div>
@@ -520,69 +523,61 @@
             </p>
             <p>This balance will be carried over to the new loan.</p>
             <hr class="form-hr" />
-            <fieldset>
-              <legend>New Loan Terms</legend>
+            <div class="form-group">
+              <label for="refinance-new-amount"
+                >Additional Amount to Add (₹)</label
+              >
+              <input
+                type="number"
+                id="refinance-new-amount"
+                class="form-control"
+                required
+                min="0"
+                value="0"
+              />
+            </div>
+            <div class="form-row">
               <div class="form-group">
-                <label for="refinance-new-amount"
-                  >Additional Amount to Add (₹)</label
-                >
-                <input
+                <label for="refinance-interest-rate"
+                  >New Monthly Interest Rate (%)</label
+                ><input
                   type="number"
-                  id="refinance-new-amount"
+                  id="refinance-interest-rate"
                   class="form-control"
                   required
                   min="0"
-                  value="0"
+                  step="0.01"
                 />
-              </div>
-              <div class="form-row">
-                <div class="form-group">
-                  <label for="refinance-new-rate"
-                    >New Monthly Interest Rate (%)</label
-                  >
-                  <input
-                    type="number"
-                    id="refinance-new-rate"
-                    class="form-control"
-                    required
-                    min="0"
-                    step="0.01"
-                  />
-                </div>
-                <div class="form-group">
-                  <label for="refinance-collection-frequency"
-                    >Collection Frequency</label
-                  >
-                  <select
-                    id="refinance-collection-frequency"
-                    class="form-control"
-                    required
-                  >
-                    <option value="daily">Daily</option>
-                    <option value="weekly">Weekly</option>
-                    <option value="monthly">Monthly</option>
-                  </select>
-                </div>
               </div>
               <div class="form-group">
-                <label for="refinance-loan-end-date">New Loan End Date</label>
-                <input
-                  type="date"
-                  id="refinance-loan-end-date"
-                  class="form-control"
-                  required
-                />
+                <label for="refinance-frequency"
+                  >New Collection Frequency</label
+                >
+                <select id="refinance-frequency" class="form-control" required>
+                  <option value="daily">Daily</option>
+                  <option value="weekly">Weekly</option>
+                  <option value="monthly">Monthly</option>
+                </select>
               </div>
-              <div
-                id="refinance-installment-preview"
-                class="installment-preview hidden"
-              ></div>
-            </fieldset>
+            </div>
+            <div class="form-group">
+              <label for="refinance-end-date">New Loan End Date</label>
+              <input
+                type="date"
+                id="refinance-end-date"
+                class="form-control"
+                required
+              />
+            </div>
 
             <p class="summary-line">
               New Principal will be:
               <strong id="refinance-new-principal">₹0.00</strong>
             </p>
+            <div
+              id="refinance-installment-preview"
+              class="installment-preview hidden"
+            ></div>
           </form>
         </div>
         <div class="modal-footer">
