--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="auth-card">
         <div class="auth-panel auth-panel-branding">
           <div class="auth-logo"><i class="fas fa-globe"></i></div>
-          <h2 class="branding-title">Global Finance Consultant</h2>
+          <h2 class="branding-title">GF Consultant</h2>
           <p class="branding-subtitle">
             Streamline your lending operations with precision and ease.
           </p>
@@ -91,7 +91,7 @@
         <div class="sidebar-header">
           <h2 class="ola">
             <i class="fas fa-globe"></i>
-            <span class="sidebar-brand-full">Global Finance Consultant</span>
+            <span class="sidebar-brand-full">GF Consultant</span>
             <span class="sidebar-brand-short">GFC</span>
           </h2>
         </div>
